# idp-poc

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.ui  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: PRD.md
migrations/: 001_initial.sql
src/: config.py
src/api/: main.py
src/api/routes/: chat.py  documents.py  processing.py  review.py
src/models/: schemas.py
src/pipeline/: chunker.py  classifier.py  confidence_router.py  embedder.py  extractor.py  llm_utils.py  ocr_engine.py  orchestrator.py  pdf_parser.py  quality_assessor.py
src/rag/: chat.py  retriever.py
src/storage/: database.py  minio_client.py
tests/: test_health.py
ui/: app.py
ui/pages/: documents.py  review.py  upload.py
