[project]
name = "praxisiq"
version = "0.1.0"
description = "Intelligent Document Processing POC"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "asyncpg>=0.30.0",
    "anthropic>=0.42.0",
    "pypdf>=5.0.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "Pillow>=11.0.0",
    "minio>=7.2.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.41.0",
    "requests>=2.32.0",
    "plotly>=5.24.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
